crates/jarl-core/src/lints/expect_length/snapshots/jarl_core__lints__expect_length__tests__fix_output.snap
---
source: crates/jarl-core/src/lints/expect_length/mod.rs
expression: "get_fixed_text(vec![\"expect_equal(length(x), 2L)\",\n\"expect_equal(2, length(x))\", \"expect_equal(length(x), foo(y))\",],\n\"expect_length\", None,)"
---
OLD:
====
expect_equal(length(x), 2L)
NEW:
====
expect_length(x, 2L)

OLD:
====
expect_equal(2, length(x))
NEW:
====
expect_length(x, 2)

OLD:
====
expect_equal(length(x), foo(y))
NEW:
====
expect_length(x, foo(y))
